1. reset button now will clear the simulating data 2. fix a layout issue of time series 3. adjust the width of patient page to be 100% 4. fit time series with the provided fake data

--- a/src/app/containers/Demo27/demo27.css
+++ b/src/app/containers/Demo27/demo27.css
@@ -39,6 +39,7 @@ $right-column-width: 400px;
 }
 
 .content-time-series {
+  min-height: 500px;
   composes: content;
   flex: 1;
   align-items: center;
@@ -159,12 +160,14 @@ $right-column-width: 400px;
 }
 
 .legend-container {
-  @mixin flex-box row, space-around;
+  margin-left: 2rem;
+  @mixin flex-box row, flex-start;
   flex: 1;
 }
 
 .legend {
   @mixin flex-box row;
+  margin-right: 2rem;
   height: 30px;
   /* default icon */
   &:before {
